[project]
name = "blog_writer"
version = "0.1.0"
description = "blog_writer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0",
    "matplotlib>=3.5.0,<4.0.0",
    "networkx>=2.8.0,<4.0.0"
]

[project.scripts]
blog-writer = "blog_writer.cli:main"
blog_writer = "blog_writer.main:run"
run_with_retries = "blog_writer.main:run_with_custom_retries"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["src/blog_writer"]
